objects/icBase__Generic_Requirement__c.object
<CustomObject>
    <description>Definition of generic system management configuration</description>
    <fields>
        <fullName>icBase__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>icBase__Project__c</fullName>
        <label>Project</label>
        <referenceTo>icBase__Project2__c</referenceTo>
        <relationshipName>Generic_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>icBase__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icBase__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed to Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verified (END)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>icBase__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security &amp; Sharing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web-To-Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Organisation Management</label>
    <listViews>
        <fullName>icBase__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Organisation Management Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organisation Management</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>